data: cron update

--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -9798,3 +9798,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/287612812/
         dtstart: 2022-08-18 18:30:00+02:00
         dtend: 2022-08-18 19:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Enabling the Computational Future of Biology
+        description: 'TypeDB Prague Engineers
+
+          Thursday, August 18 at 6:30 PM
+
+
+          **Talk Summary**Computational biology has revolutionised biomedicine. The volume of data it is generating is growing exponentially. This requires tool...
+
+
+          https://www.meetup.com/typedb-prague/events/287612812/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287612812@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/287612812/
+        dtstart: 2022-08-18 18:30:00+02:00
+        dtend: 2022-08-18 19:30:00+02:00
