--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -12760,3 +12760,53 @@ series:
         url: https://www.meetup.com/asociace-ux/events/286240684/
         dtstart: 2022-06-06 18:00:00+02:00
         dtend: 2022-06-06 20:00:00+02:00
+  - meetupcom:
+      meta_description: 'Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.
+
+        Akci organizují Výzkumatky – Volné sdružení výzkumnic s odbornými zk'
+      og_title: 'Research Tuesday: Jak se žije lidem s hendikepem v digitálním světě?, Tue, Sep 6, 2022, 9:30 AM   | Meetup'
+      url: https://www.meetup.com/asociace-ux/events/287991969/
+      ical:
+        summary: 'Research Tuesday: Jak se žije lidem s hendikepem v digitálním světě?'
+        description: 'Asociace UX
+
+          Tuesday, September 6 at 9:30 AM
+
+
+          Research Tuesday jsou setkání, kde profesionálové z oboru uživatelského výzkumu sdílí svoje zkušenosti.Akci organizují Výzkumatky – Volné sdružení výz...
+
+
+          https://www.meetup.com/asociace-ux/events/287991969/'
+        location: The Forge – Kovárna Braník (Branická 26/43, , Hlavní město Praha, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287991969@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/287991969/
+        dtstart: 2022-09-06 09:30:00+02:00
+        dtend: 2022-09-06 12:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: UX piknik
+        description: 'Asociace UX
+
+          Monday, August 8 at 6:00 PM
+
+
+          Rádi bychom pokračovali v tradici "kulatých stolů" a "UX grilů" a letos to vyšlo na "UX piknik" - neformální setkání členů i nečlenů Asociace UX, kdy ...
+
+
+          https://www.meetup.com/asociace-ux/events/287501160/'
+        location: Vyšehrad (V Pevnosti 159/5b, Praha 2-Vyšehrad, Czech Republic 128 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287501160@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/287501160/
+        dtstart: 2022-08-08 18:00:00+02:00
+        dtend: 2022-08-08 20:00:00+02:00
