--- a/data/sources/frontendisti.yaml
+++ b/data/sources/frontendisti.yaml
@@ -16990,12 +16990,9 @@ series:
         dtstart: 2022-02-09 18:00:00+01:00
         dtend: 2022-02-09 20:00:00+01:00
   - meetupcom:
-      meta_description: 'Prázdniny se pomalu chýlí ke konci, meetupů se teď moc nedělo, nám se začalo stýskat a rozhodli jsme se to změnit.
-
-
-        Přijďte si s námi dát ve **středu 24.8**. dobré jídlo a '
-      og_title: Letní grilovačka u SUPERKODERS | Frontendisti.cz, Wed, Aug 24, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/frontendisti/events/287693878/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Letní grilovačka u SUPERKODERS | Frontendisti.cz
         description: 'Frontendisti.cz
