--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -10766,3 +10766,73 @@ series:
         url: https://www.meetup.com/strv-meetups/events/287693096/
         dtstart: 2022-08-18 18:30:00+02:00
         dtend: 2022-08-18 21:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Web3 Meetup Vol. 3
+        description: 'STRV Meetups
+
+          Thursday, August 18 at 6:30 PM
+
+
+          (https://events.enter.xyz/event/strv-web3-meetup) Join this month’s edition of our STRV Web3 Meetups — regular fireside chats about NFTs, blockchain, ...\n
+
+          https://www.meetup.com/strv-meetups/events/287693096/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287693096@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/287693096/
+        dtstart: 2022-08-18 18:30:00+02:00
+        dtend: 2022-08-18 21:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Frontend Chill & BBQ
+        description: 'STRV Meetups
+
+          Thursday, August 11 at 6:30 PM
+
+
+          👉 (https://www.eventbrite.com/e/frontend-chill-bbq-tickets-391015888047?aff=meetup) 👈
+
+
+          https://www.meetup.com/strv-meetups/events/287443212/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287443212@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/287443212/
+        dtstart: 2022-08-11 18:30:00+02:00
+        dtend: 2022-08-11 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV iOS Quiz & BBQ
+        description: 'STRV Meetups
+
+          Wednesday, August 3 at 6:00 PM
+
+
+          🍎 (https://www.eventbrite.com/e/ios-quiz-bbq-tickets-390336576207?aff=meetup) 🍎
+
+          \nhttps://www.meetup.com/strv-meetups/events/287390057/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287390057@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/287390057/
+        dtstart: 2022-08-03 18:00:00+02:00
+        dtend: 2022-08-03 22:00:00+02:00
