--- a/data/sources/protest-cz.yaml
+++ b/data/sources/protest-cz.yaml
@@ -20410,3 +20410,27 @@ series:
         url: https://www.meetup.com/protest_cz/events/286604262/
         dtstart: 2022-06-21 18:00:00+02:00
         dtend: 2022-06-21 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 108. [pro:]TEST! meetup - Test automatizace v Playwright
+        description: '[pro:]TEST!
+
+          Tuesday, June 21 at 6:00 PM
+
+
+          **Anotace přednášky** Playwright je moderní knihovna pro automatizaci moderních prohlížečů. Nabízí vše, co by si mohl automatizér přát a ještě mnohem ...
+
+
+          https://www.meetup.com/protest_cz/events/286604262/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286604262@meetup.com
+        url: https://www.meetup.com/protest_cz/events/286604262/
+        dtstart: 2022-06-21 18:00:00+02:00
+        dtend: 2022-06-21 19:00:00+02:00
