data: cron update

--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -23202,3 +23202,99 @@ series:
         url: https://www.meetup.com/gdg-ostrava/events/278023608/
         dtstart: 2021-06-02 18:00:00+02:00
         dtend: 2021-06-02 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: I/O 2022 Extended Ostrava Meetup
+        description: 'GDG Ostrava
+
+          Wednesday, May 11 at 4:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-io-2022-ext...
+
+
+          https://www.meetup.com/gdg-ostrava/events/284926288/'
+        location: Online event
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_284926288@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/284926288/
+        dtstart: 2022-05-11 16:00:00+02:00
+        dtend: 2022-05-11 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Mezinárodní Týden žen (international women's week)
+        description: 'GDG Ostrava
+
+          Wednesday, March 2 at 10:00 AM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-mezinarodni...
+
+
+          https://www.meetup.com/gdg-ostrava/events/283915704/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_283915704@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/283915704/
+        dtstart: 2022-03-02 10:00:00+01:00
+        dtend: 2022-03-08 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: DevFest.cz 2021 powered by TechMeetup
+        description: 'GDG Ostrava
+
+          Friday, November 26 at 9:00 AM
+
+
+          PLEASE RSVP USING THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-devfestcz-2021-powered-by-techmeetup/     &...
+
+
+          https://www.meetup.com/gdg-ostrava/events/281546792/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_281546792@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/281546792/
+        dtstart: 2021-11-26 09:00:00+01:00
+        dtend: 2021-11-26 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Cybersecurity with Zdenek Klus II [Czech]
+        description: 'GDG Ostrava
+
+          Wednesday, June 2 at 6:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-cybersecuri...
+
+
+          https://www.meetup.com/gdg-ostrava/events/278023608/'
+        location: null
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_278023608@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/278023608/
+        dtstart: 2021-06-02 18:00:00+02:00
+        dtend: 2021-06-02 21:00:00+02:00
