--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -25042,3 +25042,145 @@ series:
         url: https://www.meetup.com/morning-talks/events/285390571/
         dtstart: 2022-06-15 09:00:00+02:00
         dtend: 2022-06-15 10:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/jira-jako-crm-a-hr-modul/
+
+
+        **Na co se můžete těšit:**
+
+        V Jiře se dá sled'
+      og_title: Jira jako CRM a HR Modul, Wed, Sep 14, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/288152817/
+      ical:
+        summary: Jira jako CRM a HR Modul
+        description: 'Morning Talks
+
+          Wednesday, September 14 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/jira-jako-crm-a-hr-modul/ **Na co se můžete těšit:...
+
+
+          https://www.meetup.com/morning-talks/events/288152817/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152817@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152817/
+        dtstart: 2022-09-14 09:00:00+02:00
+        dtend: 2022-09-14 10:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/kubernetes-nasazeni-cloud-native-aplikaci/
+
+
+        **Na co se můžete těšit:**
+
+        '
+      og_title: Kubernetes - nasazení cloud native aplikací, Wed, Sep 21, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/288152824/
+      ical:
+        summary: Kubernetes - nasazení cloud native aplikací
+        description: 'Morning Talks
+
+          Wednesday, September 21 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/kubernetes-nasazeni-cloud-native-aplikaci/ **Na co...
+
+
+          https://www.meetup.com/morning-talks/events/288152824/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152824@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152824/
+        dtstart: 2022-09-21 09:00:00+02:00
+        dtend: 2022-09-21 10:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/rest-is-best-nebo-za-trest/
+
+
+        V dnešní době se rozmohl takový nešvar naz'
+      og_title: REST is BEST, nebo za TREST?, Thu, Sep 22, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/288152830/
+      ical:
+        summary: REST is BEST, nebo za TREST?
+        description: 'Morning Talks
+
+          Thursday, September 22 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/rest-is-best-nebo-za-trest/ V dnešní době se rozmo...
+
+
+          https://www.meetup.com/morning-talks/events/288152830/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152830@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152830/
+        dtstart: 2022-09-22 09:00:00+02:00
+        dtend: 2022-09-22 10:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/automatizace-zivotniho-cyklu-it-systemu-pomoci-foremankatello/
+
+
+        Správa '
+      og_title: Automatizace životního cyklu IT systému pomocí Foreman/Katello, Wed, Oct 5, 2022, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/288152838/
+      ical:
+        summary: Automatizace životního cyklu IT systému pomocí Foreman/Katello
+        description: 'Morning Talks
+
+          Wednesday, October 5 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/automatizace-zivotniho-cyklu-it-systemu-pomoci-for...\n
+
+          https://www.meetup.com/morning-talks/events/288152838/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152838@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152838/
+        dtstart: 2022-10-05 09:00:00+02:00
+        dtend: 2022-10-05 10:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Představení moderních linuxových kontejnerů pomocí nástrojů Podman a Buildah
+        description: 'Morning Talks
+
+          Wednesday, June 29 at 9:00 AM
+
+
+          Prosíme Vás o registraci přímo na stránkách Datascriptu:https://www.datascript.cz/morning-talks/predstaveni-modernich-linuxovych-kontejneru-pomoci-nas...
+
+          \nhttps://www.meetup.com/morning-talks/events/285390587/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_285390587@meetup.com
+        url: https://www.meetup.com/morning-talks/events/285390587/
+        dtstart: 2022-06-29 09:00:00+02:00
+        dtend: 2022-06-29 10:00:00+02:00
