--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -12548,21 +12548,9 @@ series:
         dtstart: 2022-08-16 18:30:00+02:00
         dtend: 2022-08-16 20:30:00+02:00
   - meetupcom:
-      meta_description: '• How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-        '
-      og_title: GDG Garage Prague One, Tue, Aug 30, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gdgprague/events/xqcsqsydclbnc/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -14827,3 +14815,39 @@ series:
         url: https://www.meetup.com/gdgprague/events/287451202/
         dtstart: 2022-08-16 18:30:00+02:00
         dtend: 2022-08-16 20:30:00+02:00
+  - meetupcom:
+      meta_description: '• How to join?
+
+        Online only because of covid https://discord.gg/TnaMJMyTDw
+
+
+        • What we''ll do
+
+        https://sites.google.com/site/garagepragueone/home
+
+
+        http://gdg-garage.github.io/
+
+        '
+      og_title: GDG Garage Prague One, Tue, Oct 25, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/gdgprague/events/xqcsqsydcnbhc/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, October 25 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/xqcsqsydcnbhc/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsydcnbhc@meetup.com
+        url: https://www.meetup.com/gdgprague/events/xqcsqsydcnbhc/
+        dtstart: 2022-10-25 18:30:00+02:00
+        dtend: 2022-10-25 20:30:00+02:00
