--- a/data/sources/pydata-prague.yaml
+++ b/data/sources/pydata-prague.yaml
@@ -20408,7 +20408,7 @@ series:
         dtstart: 2021-07-13 18:30:00+02:00
         dtend: 2021-07-13 21:30:00+02:00
   - meetupcom:
-      meta_description: The PyData Global Online Conference is where users, contributors, and newcomers can share experiences to learn from one another and grow together. PyData provides a virtual
+      meta_description: The [PyData Global Online Conference](https://pydata.org/global2022/) is where users, contributors, and newcomers can share experiences to learn from one another and grow t
       og_title: PyData Global 2022 (GLOBAL ONLINE CONFERENCE), Thu, Dec 1, 2022, 7:30 AM   | Meetup
       url: https://www.meetup.com/pydata-prague/events/288055560/
       ical:
@@ -20418,7 +20418,7 @@ series:
           Thursday, December 1 at 7:30 AM
 
 
-          The PyData Global Online Conference is where users, contributors, and newcomers can share experiences to learn from one another and grow together. PyD...
+          The (https://pydata.org/global2022/) is where users, contributors, and newcomers can share experiences to learn from one another and grow together. Py...
 
 
           https://www.meetup.com/pydata-prague/events/288055560/'
@@ -20431,6 +20431,30 @@ series:
         url: https://www.meetup.com/pydata-prague/events/288055560/
         dtstart: 2022-12-01 07:30:00+01:00
         dtend: 2022-12-04 00:59:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'PyData Prague #11 - Hovering over Capulets'
+        description: 'PyData Prague
+
+          Monday, June 27 at 6:00 PM
+
+
+          Hello data-lovers and Python craft-masters! Another PyData Prague meetup is here and this time we will meet in **(https://goo.gl/maps/FHvjbwTtYULjTKvS...
+
+
+          https://www.meetup.com/pydata-prague/events/286566742/'
+        location: Ataccama Software, s.r.o. (Invalidovna, Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286566742@meetup.com
+        url: https://www.meetup.com/pydata-prague/events/286566742/
+        dtstart: 2022-06-27 18:00:00+02:00
+        dtend: 2022-06-27 21:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
