--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -1,7 +1,7 @@
 series:
   meetupcom:
     url: https://www.meetup.com/praguejs/events/
-    meta_description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup group with over 2098 Members.
+    meta_description: Upcoming events for PragueJS in Prague, Czech Republic. A Meetup group with over 2097 Members.
     og_title: Upcoming events | PragueJS (Prague, Czech Republic)
     image: https://secure.meetupstatic.com/photos/event/e/8/f/c/600_455639644.jpeg
   events:
@@ -545,3 +545,29 @@ series:
         url: https://www.meetup.com/praguejs/events/285600682/
         dtstart: 2022-06-29 18:30:00+02:00
         dtend: 2022-06-29 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Get out and get social in 2022 : come out and discuss JS together!
+
+        Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
+      og_title: '2022 #7 Goodbye summer party, Tue, Sep 6, 2022, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/praguejs/events/288152677/
+      ical:
+        summary: '2022 #7 Goodbye summer party'
+        description: 'PragueJS
+
+          Tuesday, September 6 at 6:30 PM
+
+
+          Get out and get social in 2022 : come out and discuss JS together!Get in touch with the organizers with any questions you have. We welcome a diverse r...
+
+
+          https://www.meetup.com/praguejs/events/288152677/'
+        location: Pivo a párek (Bořivojova 58, Praha 3-Žižkov, Czech Republic 130 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152677@meetup.com
+        url: https://www.meetup.com/praguejs/events/288152677/
+        dtstart: 2022-09-06 18:30:00+02:00
+        dtend: 2022-09-06 21:30:00+02:00
