--- a/data/sources/productboard.yaml
+++ b/data/sources/productboard.yaml
@@ -16259,3 +16259,56 @@ series:
         url: https://www.meetup.com/productboard-meetups/events/286708983/
         dtstart: 2022-06-27 19:00:00+02:00
         dtend: 2022-06-27 22:00:00+02:00
+  - meetupcom:
+      meta_description: '**We will talk about building a successful engineering-product-design organization from scratch.**
+
+
+        **Please register via Eventbrite:**
+
+        **[https://www.eventbrite.com/e/engi'
+      og_title: 'Engineering-Product-Design Society Meetup #2, Wed, Sep 14, 2022, 5:30 PM   | Meetup'
+      url: https://www.meetup.com/productboard-meetups/events/288202311/
+      ical:
+        summary: 'Engineering-Product-Design Society Meetup #2'
+        description: 'Productboard Meetups
+
+          Wednesday, September 14 at 5:30 PM
+
+
+          **We will talk about building a successful engineering-product-design organization from scratch.** **Please register via Eventbrite:****(https://www.e...
+
+
+          https://www.meetup.com/productboard-meetups/events/288202311/'
+        location: 411 Dunsmuir St (411 Dunsmuir St, Vancouver, BC, Canada V6B 1X4)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288202311@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/288202311/
+        dtstart: 2022-09-14 17:30:00+02:00
+        dtend: 2022-09-14 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Tech Community Summer Gathering
+        description: 'Productboard Meetups
+
+          Wednesday, August 17 at 6:00 PM
+
+
+          Productboard has been quietly growing our Brno presence for the last few months and we really enjoyed meeting the tech community.We want to continue o...
+
+
+          https://www.meetup.com/productboard-meetups/events/287756409/'
+        location: Impact Hub Brno (Cyrilská 7, Brno-střed-Trnitá, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287756409@meetup.com
+        url: https://www.meetup.com/productboard-meetups/events/287756409/
+        dtstart: 2022-08-17 18:00:00+02:00
+        dtend: 2022-08-17 21:00:00+02:00
